--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -43,22 +43,37 @@ jobs:
             Expand-Archive -Path $zipPath -DestinationPath $extractPath -Force
 
             # Find the actual crystal directory inside the extracted folder
-            $crystalDir = Get-ChildItem -Path $extractPath -Directory | Select-Object -First 1
+            $crystalDir = Get-ChildItem -Path $extractPath -Directory | Where-Object { $_.Name -like "*crystal*" } | Select-Object -First 1
             if ($crystalDir) {
               $crystalBinPath = "$($crystalDir.FullName)\bin"
               Write-Host "Crystal extracted to: $crystalBinPath" -ForegroundColor Cyan
             } else {
               $crystalBinPath = "$extractPath\bin"
+              Write-Host "Using fallback path: $crystalBinPath" -ForegroundColor Yellow
             }
 
-            # Add to PATH for this session
-            $env:PATH = "$crystalBinPath;$env:PATH"
+            # Verify the path exists and contains crystal.exe
+            if (Test-Path "$crystalBinPath\crystal.exe") {
+              Write-Host "✅ Crystal executable found at: $crystalBinPath\crystal.exe" -ForegroundColor Green
 
-            Write-Host "Verifying Crystal installation..." -ForegroundColor Yellow
-            crystal --version
-            shards --version
+              # Add to PATH for current session
+              $env:PATH = "$crystalBinPath;$env:PATH"
 
-            Write-Host "✅ Crystal installed successfully!" -ForegroundColor Green
+              # Add to PATH for subsequent GitHub Actions steps
+              echo "$crystalBinPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+              Write-Host "Verifying Crystal installation..." -ForegroundColor Yellow
+              & "$crystalBinPath\crystal.exe" --version
+              & "$crystalBinPath\shards.exe" --version
+
+              Write-Host "✅ Crystal portable installation successful!" -ForegroundColor Green
+              exit 0
+            } else {
+              Write-Host "❌ Crystal executable not found at expected location" -ForegroundColor Red
+              Write-Host "Contents of $extractPath:" -ForegroundColor Yellow
+              Get-ChildItem -Path $extractPath -Recurse -Name "crystal.exe" | ForEach-Object { Write-Host "  Found: $_" }
+              throw "Crystal executable not found"
+            }
           } else {
             throw "No Windows portable package found in latest release"
           }
@@ -77,12 +92,32 @@ jobs:
           scoop bucket add crystal-preview https://github.com/neatorobito/scoop-crystal
           scoop install crystal
 
-          # Refresh environment
-          refreshenv
+          # Find Scoop Crystal installation path
+          $scoopCrystalPath = "$env:USERPROFILE\scoop\apps\crystal\current\bin"
+          if (-not (Test-Path $scoopCrystalPath)) {
+            $scoopCrystalPath = "$env:USERPROFILE\scoop\shims"
+          }
 
-          Write-Host "Verifying Scoop Crystal installation..." -ForegroundColor Yellow
-          crystal --version
-          shards --version
+          if (Test-Path "$scoopCrystalPath\crystal.exe") {
+            Write-Host "✅ Scoop Crystal found at: $scoopCrystalPath" -ForegroundColor Green
+
+            # Add to PATH for current session
+            $env:PATH = "$scoopCrystalPath;$env:PATH"
+
+            # Add to PATH for subsequent GitHub Actions steps
+            echo "$scoopCrystalPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+            Write-Host "Verifying Scoop Crystal installation..." -ForegroundColor Yellow
+            crystal --version
+            shards --version
+
+            Write-Host "✅ Scoop Crystal installation successful!" -ForegroundColor Green
+          } else {
+            Write-Host "❌ Crystal not found even after Scoop installation" -ForegroundColor Red
+            Write-Host "Checking common Scoop locations..." -ForegroundColor Yellow
+            Get-ChildItem -Path "$env:USERPROFILE\scoop" -Recurse -Name "crystal.exe" -ErrorAction SilentlyContinue | ForEach-Object { Write-Host "  Found: $_" }
+            exit 1
+          }
         }
 
     - name: Verify Crystal and Shards
@@ -96,8 +131,10 @@ jobs:
           Write-Host "✅ Crystal available: $($crystalVersion.Split("`n")[0])" -ForegroundColor Green
         } catch {
           Write-Host "❌ Crystal not found in PATH" -ForegroundColor Red
-          Write-Host "Current PATH: $env:PATH" -ForegroundColor Yellow
-          Get-Command crystal -ErrorAction SilentlyContinue | Format-List
+          Write-Host "Current PATH includes:" -ForegroundColor Yellow
+          $env:PATH.Split(';') | Where-Object { $_ -like "*crystal*" } | ForEach-Object { Write-Host "  $_" }
+          Write-Host "Searching for crystal.exe..." -ForegroundColor Yellow
+          Get-ChildItem -Path "C:\" -Recurse -Name "crystal.exe" -ErrorAction SilentlyContinue | Select-Object -First 5 | ForEach-Object { Write-Host "  Found: $_" }
           exit 1
         }
 
@@ -107,8 +144,8 @@ jobs:
           Write-Host "✅ Shards available: $($shardsVersion.Split("`n")[0])" -ForegroundColor Green
         } catch {
           Write-Host "❌ Shards not found in PATH" -ForegroundColor Red
-          Write-Host "Current PATH: $env:PATH" -ForegroundColor Yellow
-          Get-Command shards -ErrorAction SilentlyContinue | Format-List
+          Write-Host "Current PATH includes:" -ForegroundColor Yellow
+          $env:PATH.Split(';') | Where-Object { $_ -like "*crystal*" } | ForEach-Object { Write-Host "  $_" }
           exit 1
         }
 
